Tested UI behavioud

--- a/src/devtools/devtools.html
+++ b/src/devtools/devtools.html
@@ -45,6 +45,6 @@
       </div>
     </div>
 
-    <script src="http://localhost:9000/devtoolsController.js"></script>
+    <script src="./devtools.js"></script>
   </body>
 </html>
